--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-  <h1>This is a Heading</h1>
-  <p>This is a paragraph.</p>
+  <h1 style="backgroud-color:red">Empezar</h1>
+  <p>TECNOLOGIA</p>
   <div class="">
     <h1>This is a Heading</h1>
     <p>This is a paragraph.</p>
